k8s/apps/datalake-metrics/pyrra/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.10.1
  name: pyrra-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: pyrra
      app.kubernetes.io/part-of: kube-prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        parca.dev/scrape: "true"
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: pyrra
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 0.10.1
    spec:
      containers:
        - args:
            - api
            - --api-url=http://pyrra-kubernetes:9444
            - --prometheus-url=http://prometheus-k8s:9090
            - --prometheus-external-url=https://prometheus.ankhmorpork.thaum.xyz
          image: ghcr.io/pyrra-dev/pyrra:v0.10.1
          name: pyrra
          ports:
            - containerPort: 9099
          resources:
            requests:
              cpu: 100m
              memory: 30Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      nodeSelector:
        kubernetes.io/os: linux
