k8s/apps/datalake-metrics/pyrra/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.10.1
  name: pyrra-api
spec:
  ports:
    - name: http
      port: 9099
      targetPort: 9099
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
